fix layout bug on Firefox: mission statement text written on 4 rows

--- a/wwwbase/styles/zepu.css
+++ b/wwwbase/styles/zepu.css
@@ -400,7 +400,7 @@ img {
   font-size: 13px;
   margin: 25px auto 20px;
   text-align: center;
-  width: 640px;
+  width: 650px;
 }
 
 
